[tool.poetry]
name = "point-proximity"
version = "0.1.0"
description = "Discovering point proximity for abi"
authors = ["Ben Gazzard <ben@dartoxia.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
